fixed terminal overflow

--- a/src/styles/bento.css
+++ b/src/styles/bento.css
@@ -24,6 +24,7 @@
     border: 2px solid red;
     visibility: hidden;
     position: relative;
+    overflow: auto;
 }
 
 .flex-col{
