--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,7 +31,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%; /* Full viewport height */
+  max-height: 100%; /* Full viewport height */
   position: relative;
   background-color: #000000; /* Light background for visibility */
   border-radius: 2em;
